@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-07-22T16:08:51Z",
+  "timestamp" : "2023-07-23T00:48:34Z",
   "count_outdated" : 4789,
   "uniques_outdated" : 1386,
-  "count" : 4870,
+  "count" : 4871,
   "uniques" : 1436,
   "clones" : [
     {
@@ -124,9 +124,9 @@
     },
     {
       "timestamp": "2023-07-22T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
